--- a/Project/Client/Views/Home/Index.cshtml
+++ b/Project/Client/Views/Home/Index.cshtml
@@ -4,17 +4,20 @@
 }
 <div class="Image_Gallery">
     <div class="box">
-        <span style="--i:1"><img src="~/image/history-game-1.jpg" /></span>
-        <span style="--i:2"><img src="~/image/history-game-1.jpg" /></span>
-        <span style="--i:3"><img src="~/image/history-game-1.jpg" /></span>
-        <span style="--i:4"><img src="~/image/history-game-1.jpg" /></span>
-        <span style="--i:5"><img src="~/image/history-game-1.jpg" /></span>
-        <span style="--i:6"><img src="~/image/history-game-1.jpg" /></span>
-        <span style="--i:7"><img src="~/image/history-game-1.jpg" /></span>
-        <span style="--i:8"><img src="~/image/history-game-1.jpg" /></span>
-    </div>
-</div>
-
+        <span style="--i:1"><img src="~/image/game.jpg" /></span>
+        <span style="--i:2"><img src="~/image/g4t.png" /></span>
+        <span style="--i:3"><img src="~/image/g4t1.png" /></span>
+        <span style="--i:4"><img src="~/image/bia.jpg" /></span>
+        <span style="--i:5"><img src="~/image/game.jpg" /></span>
+        <span style="--i:6"><img src="~/image/game.jpg" /></span>
+        <span style="--i:7"><img src="~/image/game.jpg" /></span>
+        <span style="--i:8"><<img src="~/image/game.jpg" /></span>
+    </div>  
+</div> 
+    <div id="g_id_onload"
+        data-client_id="931532368031-fve5bfiu4t6uvu5laj3gq9fbj7okl43e.apps.googleusercontent.com"
+        data-login_uri='/google-response'>
+    </div> 
 
 <div id="carouselExampleInterval" class="carousel slide mt-4" data-bs-ride="carousel" style="width: 94%; min-height:300px; border-radius:5px; margin: 0 3%;">
     <div class="carousel-inner">
