--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -17,6 +17,10 @@
     
     @* Owl.Theme.default.min.css *@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+        
+
 </head>
 <body style="background-color: rgba(255, 255, 255, 0.9);">
 
@@ -26,7 +30,11 @@
 
     <div class="container-fluid">
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light">
+
+           
+
+            <!-- Navbar -->
+            <nav class="navbaradmin navbar navbar-expand-lg navbar-light bg-white">
                 <div class="container-fluid">
                     <div class="d-flex w-100">
                         <span class="col-md-2 logo me-auto" style="list-style-type: none;padding-left: 0;">
