--- a/Project/Client/Views/User/Login.cshtml
+++ b/Project/Client/Views/User/Login.cshtml
@@ -156,17 +156,36 @@
         </form>
         <div class="white-background mt-2">
             <div class="login-divider text-center pt-2" style="color: grey;">Or login with</div>
-            <div class="d-flex justify-content-center gap-2 mt-3">
+            <div class="d-flex flex-wrap justify-content-center gap-2 mt-3">
                 <button type="button" class="btn btn-outline-dark d-flex align-items-center">
                     <i class="fab fa-github me-2"></i> GitHub
                 </button>
-                <button type="button" class="btn btn-outline-danger d-flex align-items-center">
-                    <i class="fab fa-google me-2"></i> Google
+                <button type="button" class="btn  d-flex align-items-center">
+                    @*    <i class="fab fa-google me-2"></i> google *@
+                    <div id="g_id_onload"
+                         data-client_id="931532368031-fve5bfiu4t6uvu5laj3gq9fbj7okl43e.apps.googleusercontent.com"
+                         data-context="signin"
+                         data-ux_mode="popup"
+                         data-login_uri="/google-response"
+                         data-auto_prompt="false">
+                    </div>
+
+                    <div class="g_id_signin"
+                         data-type="standard"
+                         data-shape="pill"
+                         data-theme="outline"
+                         data-text="signin_with"
+                         data-size="large"
+                         data-logo_alignment="left">
+                    </div>
                 </button>
+
+
+
             </div>
         </div>
         <div class="text-center mt-4">
-             <a asp-controller="Home" asp-action="Register" class="text-decoration-none">Create a new account</a>
+            <a asp-controller="User" asp-action="Register" class="text-decoration-none">Create a new account</a>
         </div>
     </div>
 </div>
