Update controller, interface,service

--- a/Project/Client/Views/Shared/_LayoutAdmin.cshtml
+++ b/Project/Client/Views/Shared/_LayoutAdmin.cshtml
@@ -64,7 +64,7 @@
 				</li>
 
 				<li class="nav-item m-2">
-					<form action="ProductsManager" method="get">
+					<form asp-action="ProductsManager" method="get">
 						<button id="products-manager-btn" class="nav-link text-start border-0 w-100">
 							<span class="p-2 fs-6 fw-bold">Products Manager</span>
 						</button>
