--- a/Project/Client/Views/Admin/ProductsManager.cshtml
+++ b/Project/Client/Views/Admin/ProductsManager.cshtml
@@ -4,7 +4,7 @@
     Layout = "_LayoutAdmin";
 }
 @using Client.Models.ProductDTO
-@* @model ProductModel *@
+@model List<ProductModel>
 
 
 
@@ -238,10 +238,8 @@
             <tr>
                 <th scope="col"><input type="checkbox" id="selectAll"></th>
                 <th scope="col">Id</th>
-
                 <th scope="col">Name</th>
                 <th scope="col">Description</th>
-
                 <th scope="col">Price</th>
                 <th scope="col">Sold</th>
                 <th scope="col">Interactions</th>
@@ -250,11 +248,9 @@
                 <th scope="col">Links</th>
                 <th scope="col">Categories</th>
                 <th scope="col">Status</th>
-
                 <th scope="col">CreatedAt</th>
                 <th scope="col">UpdatedAt</th>
                 <th scope="col">UserName</th>
-
                 <th scope="col"></th>
             </tr>
         </thead>
@@ -306,7 +302,6 @@
                     <td>@product.UpdatedAt.ToString("dd/MM/yyyy")</td>
                     <td>@product.UserName</td>
 
-                   
 
                     <td>
                         <a asp-action="UpdateProduct" asp-route-id="@product.Id" class="text-danger mx-2">
@@ -314,11 +309,11 @@
                         </a>
                     </td>
                     <td>
-                        @* <form asp-action="UsersDelete" >
-                    <input type="submit" value="Delete" class="btn btn-danger" />
-                    </form> *@
-                        <a asp-action="ProductDelete" asp-route-Id="@product.Id" class="text-danger mx-2"> <i class="fas fa-trash"></i></a>
-                        @* <a asp-action="UsersDelete" asp-route-Id="@user.Id"> <i class="fas fa-trash"></i></a> *@
+
+                        <a asp-action="DeleteProduct" asp-route-id="@product.Id" class="text-danger mx-2">
+                            <i class="fas fa-trash"></i>
+                        </a>
+
                     </td>
 
                 </tr>
