--- a/Project/Client/Views/Admin/DeleteProduct.cshtml
+++ b/Project/Client/Views/Admin/DeleteProduct.cshtml
@@ -19,14 +19,45 @@
         <dt class="col-sm-2">Description</dt>
         <dd class="col-sm-10">@Model.Description</dd>
 
-        <!-- Các field khác tương tự -->
+        <dt class="col-sm-2">Price</dt>
+        <dd class="col-sm-10">@Model.Price</dd>
+
+        <dt class="col-sm-2">Sold</dt>
+        <dd class="col-sm-10">@Model.Sold</dd>
+
+        <dt class="col-sm-2">Interactions</dt>
+        <dd class="col-sm-10">@Model.Interactions</dd>
+
+        <dt class="col-sm-2">Discount</dt>
+        <dd class="col-sm-10">@Model.Discount</dd>
+
+        <dt class="col-sm-2">Platform</dt>
+        <dd class="col-sm-10">@Model.Platform</dd>
+
+        <dt class="col-sm-2">Links</dt>
+        <dd class="col-sm-10">@Model.Links</dd>
+
+        <dt class="col-sm-2">Categories</dt>
+        <dd class="col-sm-10">@Model.Categories</dd>
+
+        <dt class="col-sm-2">Status</dt>
+        <dd class="col-sm-10">@Model.Status</dd>
+
+        <dt class="col-sm-2">CreatedAt</dt>
+        <dd class="col-sm-10">@Model.CreatedAt</dd>
+
+        <dt class="col-sm-2">UpdatedAt</dt>
+        <dd class="col-sm-10">@Model.UpdatedAt</dd>
 
         <dt class="col-sm-2">UserName</dt>
         <dd class="col-sm-10">@Model.UserName</dd>
+
     </dl>
 
     <form asp-action="DeleteProduct" method="post">
+        <input type="hidden" name="Id" value="@Model.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" />
         <a asp-action="ProductsManager" class="btn btn-secondary">Back to List</a>
     </form>
+
 </div>
