--- a/Project/Client/Views/Shared/_LayoutNull.cshtml
+++ b/Project/Client/Views/Shared/_LayoutNull.cshtml
@@ -18,7 +18,7 @@
         }
 
         .login-container {
-            height: 100vh;
+            /* height: 100vh; */
             display: flex;
             justify-content: center;
             align-items: center;
