--- a/Project/Client/Views/Admin/ProductsManager.cshtml
+++ b/Project/Client/Views/Admin/ProductsManager.cshtml
@@ -1,11 +1,10 @@
-﻿
+﻿@using Client.Models.ProductDTO
 
 @{
     Layout = "_LayoutAdmin";
 }
 
-@using Client.Models.ProductDTO
-
+@model ProductViewModel
 
 
 
@@ -260,7 +259,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var product in Model) // Giả sử 'Products' là danh sách các sản phẩm
+            @foreach (var product in Model.Product) // Giả sử 'Products' là danh sách các sản phẩm
             {
                 <tr>
                     <td><input type="checkbox" class="product-checkbox"></td>
@@ -371,15 +370,16 @@
 
 
 
-@* <div class="modal fade" id="modalProduct" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="modalProduct" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <div class="container-fluid p-5">
-                @* @await Html.PartialAsync("ProductCreate", Model.CreateProductModel) *@
+                @await Html.PartialAsync("CreateProduct", Model.CreateProductModel)
             </div>
         </div>
     </div>
-</div> *@
+</div>
+
 
 
 
