--- a/Project/Client/Views/Admin/_CreateUserPartial.cshtml
+++ b/Project/Client/Views/Admin/_CreateUserPartial.cshtml
@@ -1,4 +1,6 @@
-﻿@using Client.Models.UserDTO
+﻿
+
+@using Client.Models.UserDTO
 @model CreateUser
 
 <form class="row" asp-action="UserCreate" enctype="multipart/form-data">
