--- a/Project/Client/Views/Admin/DeleteProduct.cshtml
+++ b/Project/Client/Views/Admin/DeleteProduct.cshtml
@@ -26,7 +26,10 @@
         <dd class="col-sm-10">@Model.Sold</dd>
 
         <dt class="col-sm-2">Interactions</dt>
-        <dd class="col-sm-10">@Model.Interactions</dd>
+        <dd class="col-sm-10">
+            <p>Number of Views: @Model.Interactions?.NumberOfViews</p>
+            <p>Number of Likes: @Model.Interactions?.NumberOfLikes</p>
+        </dd>
 
         <dt class="col-sm-2">Discount</dt>
         <dd class="col-sm-10">@Model.Discount</dd>
@@ -35,10 +38,32 @@
         <dd class="col-sm-10">@Model.Platform</dd>
 
         <dt class="col-sm-2">Links</dt>
-        <dd class="col-sm-10">@Model.Links</dd>
+        <dd class="col-sm-10">
+            @if (Model.Links != null && Model.Links.Any())
+            {
+                <ul>
+                    @foreach (var link in Model.Links)
+                    {
+                        <li>
+                            <p>URL: <a href="@link.Url">@link.Url</a></p>
+                        </li>
+                    }
+                </ul>
+            }
+        </dd>
 
         <dt class="col-sm-2">Categories</dt>
-        <dd class="col-sm-10">@Model.Categories</dd>
+        <dd class="col-sm-10">
+            @if (Model.Categories != null && Model.Categories.Any())
+            {
+                <ul>
+                    @foreach (var category in Model.Categories)
+                    {
+                        <li>@category.CategoryName</li>
+                    }
+                </ul>
+            }
+        </dd>
 
         <dt class="col-sm-2">Status</dt>
         <dd class="col-sm-10">@Model.Status</dd>
