--- a/Project/Client/Views/Product/Product.cshtml
+++ b/Project/Client/Views/Product/Product.cshtml
@@ -103,62 +103,69 @@
 
             <div class="mt-2 me-1">
                 <div class="d-flex flex-wrap mt-3">
-                    <div class="card cardgamemonth m-1" style="width: 12rem; height:230px;">
+                    <div class="col-12 col-sm-12 col-md-3 card_other mt-4" style="width: 12rem; height:230px;">
+                        <img src="~/Image/game.jpg" />
+                        <div class="info_other">
+                            <h4>Heading 2</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit....</p>
+                            <a asp-controller="" asp-action="" class="btn_orther">Read More</a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-3 card_other mt-4" style="width: 12rem; height:230px;">
+                        <img src="~/Image/game.jpg" />
+                        <div class="info_other">
+                            <h4>Heading 2</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit....</p>
+                            <a asp-controller="" asp-action="" class="btn_orther">Read More</a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-3 card_other mt-4" style="width: 12rem; height:230px;">
+                        <img src="~/Image/game.jpg" />
+                        <div class="info_other">
+                            <h4>Heading 2</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit....</p>
+                            <a asp-controller="" asp-action="" class="btn_orther">Read More</a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-3 card_other mt-4" style="width: 12rem; height:230px;">
+                        <img src="~/Image/game.jpg" />
+                        <div class="info_other">
+                            <h4>Heading 2</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit....</p>
+                            <a asp-controller="" asp-action="" class="btn_orther">Read More</a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-3 card_other mt-4" style="width: 12rem; height:230px;">
+                        <img src="~/Image/game.jpg" />
+                        <div class="info_other">
+                            <h4>Heading 2</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit....</p>
+                            <a asp-controller="" asp-action="" class="btn_orther">Read More</a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-3 card_other mt-4" style="width: 12rem; height:230px;">
+                        <img src="~/Image/game.jpg" />
+                        <div class="info_other">
+                            <h4>Heading 2</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit....</p>
+                            <a asp-controller="" asp-action="" class="btn_orther">Read More</a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-3 card_other mt-4" style="width: 12rem; height:230px;">
+                        <img src="~/Image/game.jpg" />
+                        <div class="info_other">
+                            <h4>Heading 2</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit....</p>
+                            <a asp-controller="" asp-action="" class="btn_orther">Read More</a>
+                        </div>
+                    </div>
+@*                     <div class=" card cardgamemonth m-1" style="width: 12rem; height:230px;">
                         <img src="~/image/game.jpg" class="card-img-top" alt="..." />
                         <div class="card-body">
                             <h5 style="font-size:15px;">Trick Tactics - Card Adventure Game</h5>
                             <p class="text-end">109.000 <sup>đ</sup></p>
                         </div>
-                    </div>
-                    <div class=" card cardgamemonth m-1" style="width: 12rem; height:230px;">
-                        <img src="~/image/game.jpg" class="card-img-top" alt="..." />
-                        <div class="card-body">
-                            <h5 style="font-size:15px;">Trick Tactics - Card Adventure Game</h5>
-                            <p class="text-end">109.000 <sup>đ</sup></p>
-                        </div>
-                    </div>
-                    <div class=" card cardgamemonth m-1" style="width: 12rem; height:230px;">
-                        <img src="~/image/game.jpg" class="card-img-top" alt="..." />
-                        <div class="card-body">
-                            <h5 style="font-size:15px;">Trick Tactics - Card Adventure Game</h5>
-                            <p class="text-end">109.000 <sup>đ</sup></p>
-                        </div>
-                    </div>
-                    <div class=" card cardgamemonth m-1" style="width: 12rem; height:230px;">
-                        <img src="~/image/game.jpg" class="card-img-top" alt="..." />
-                        <div class="card-body">
-                            <h5 style="font-size:15px;">Trick Tactics - Card Adventure Game</h5>
-                            <p class="text-end">109.000 <sup>đ</sup></p>
-                        </div>
-                    </div>
-                    <div class=" card cardgamemonth m-1" style="width: 12rem; height:230px;">
-                        <img src="~/image/game.jpg" class="card-img-top" alt="..." />
-                        <div class="card-body">
-                            <h5 style="font-size:15px;">Trick Tactics - Card Adventure Game</h5>
-                            <p class="text-end">109.000 <sup>đ</sup></p>
-                        </div>
-                    </div>
-                    <div class=" card cardgamemonth m-1" style="width: 12rem; height:230px;">
-                        <img src="~/image/game.jpg" class="card-img-top" alt="..." />
-                        <div class="card-body">
-                            <h5 style="font-size:15px;">Trick Tactics - Card Adventure Game</h5>
-                            <p class="text-end">109.000 <sup>đ</sup></p>
-                        </div>
-                    </div>
-                    <div class=" card cardgamemonth m-1" style="width: 12rem; height:230px;">
-                        <img src="~/image/game.jpg" class="card-img-top" alt="..." />
-                        <div class="card-body">
-                            <h5 style="font-size:15px;">Trick Tactics - Card Adventure Game</h5>
-                            <p class="text-end">109.000 <sup>đ</sup></p>
-                        </div>
-                    </div>
-                    <div class=" card cardgamemonth m-1" style="width: 12rem; height:230px;">
-                        <img src="~/image/game.jpg" class="card-img-top" alt="..." />
-                        <div class="card-body">
-                            <h5 style="font-size:15px;">Trick Tactics - Card Adventure Game</h5>
-                            <p class="text-end">109.000 <sup>đ</sup></p>
-                        </div>
-                    </div>
+                    </div> *@
                 </div>
             </div>
         </div>
