--- a/Project/Client/Views/Admin/ProductsManager.cshtml
+++ b/Project/Client/Views/Admin/ProductsManager.cshtml
@@ -309,7 +309,7 @@
                    
 
                     <td>
-                        <a asp-action="ProductUpdate" asp-route-id="@product.Id" class="text-danger mx-2">
+                        <a asp-action="UpdateProduct" asp-route-id="@product.Id" class="text-danger mx-2">
                             <i class="fa-regular fa-pen-to-square"></i>
                         </a>
                     </td>
